# amrcc

./: Android.mk  Application.mk  CMakeLists.txt  amr_export.h  amrcc.csharp.i  amrcc.h  gen_csharp  interf_dec.h  interf_enc.h  libamrcc.c  nb_fxp.h  tags  test.cpp  wrapper.c
include/amrcc/: amr_export.h  amrcc.h  interf_dec.h  interf_enc.h
